--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
     <h1>Welcome to <span>uWall</span></h1>
     <p>Your one-stop platform for campus events, student clubs, and community updates.</p>
     <div class="hero-buttons">
-      <a href="login.html" class="btn">Log In</a>
-      <a href="signIn.html" class="btn secondary">Sign Up</a>
+      <a href="HTML/logIn.html" class="btn">Log In</a>
+      <a href="HTML/signIn.html" class="btn secondary">Sign Up</a>
     </div>
   </section>
 
