--- a/index.html
+++ b/index.html
@@ -192,10 +192,6 @@
         <li><a href="#">Gallery</a></li>
       </ul>
     </nav>
-    <div class="nav-actions">
-      <a href="logIn.html" class="btn secondary">Log In</a>
-      <a href="signIn.html" class="btn">Sign Up</a>
-    </div>
   </header>
 
   <!-- Hero Section -->
@@ -203,8 +199,8 @@
     <h1>Welcome to <span>uWall</span></h1>
     <p>Your one-stop platform for campus events, student clubs, and community updates.</p>
     <div class="hero-buttons">
-      <a href="HTML/logIn.html" class="btn">Log In</a>
-      <a href="HTML/signIn.html" class="btn secondary">Sign Up</a>
+      <a href="html/logIn.html" class="btn">Log In</a>
+      <a href="html/signIn.html" class="btn secondary">Sign Up</a>
     </div>
   </section>
 
