--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       width: 50px;
       height: 50px;
       border-radius: 12px;
-      overflow: hidden; /* Add this to crop the image */
+      overflow: hidden; 
       display: flex;
       align-items: center;
       justify-content: center;
@@ -58,7 +58,7 @@
     .logo img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* This zooms/crops the image */
+      object-fit: cover; 
       border-radius: 12px;
       display: block;
     }
@@ -138,7 +138,6 @@
       gap: 14px;
     }
 
-    /* Features */
     .features {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -171,7 +170,6 @@
       line-height: 1.5;
     }
 
-    /* Footer */
     footer {
       background: var(--white);
       text-align: center;
@@ -184,7 +182,7 @@
   </style>
 </head>
 <body>
-  <!-- Navigation Bar -->
+
   <header class="navbar">
   <div class="logo">
     <img src="logo.jpg" alt="uWall Logo" style="width: 50px; height: 50px; border-radius: 12px;">
@@ -200,7 +198,7 @@
   </nav>
 </header>
 
-  <!-- Hero Section -->
+
   <section class="hero">
     <h1>Welcome to <span>uWall</span></h1>
     <p>Your one-stop platform for campus events, student clubs, and community updates.</p>
@@ -210,7 +208,6 @@
     </div>
   </section>
 
-  <!-- Features -->
   <section class="features">
     <div class="feature-card">
       <h3>📅 Campus Events</h3>
@@ -230,7 +227,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>© 2025 uWall · Chitkara University. All rights reserved.</p>
   </footer>
